# shama

./: .gitignore  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
shama/: __init__.py  change.md  client.py
shama/audit/: logger.py
shama/core/: exceptions.py  interfaces.py  models.py
shama/healing/: contradiction.py  corrector.py  decay.py
shama/memory/: promoter.py  retriever.py  writer.py
shama/providers/: embeddings.py  huggingface.py  llm.py
shama/scheduler/: tasks.py
shama/stores/cache/: redis.py
shama/stores/graph/: neo4j.py
shama/stores/vector/: qdrant.py
tests/: conftest.py  smoke_test.py  test_integration.py  test_shama.py
