[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shama"
version = "0.1.1"
description = "Self-Healing Agent Memory Architecture — an immune system for AI agent memory"
authors = [
    { name = "Gowtham Sai Yadlapalli", email = "gowthamsaiyadlapalli1234@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "memory", "llm", "rag", "vector-database", "knowledge-graph", "self-healing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.9.0",
    "neo4j>=5.20.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "anyio>=4.3.0",
]

[project.optional-dependencies]
openai    = ["openai>=1.30.0"]
anthropic = ["anthropic>=0.28.0", "openai>=1.30.0"]   # openai needed for embeddings
deepseek  = ["openai>=1.30.0"]                          # deepseek uses openai SDK + openai embeddings
azure     = ["openai>=1.30.0"]                          # azure uses openai SDK
cohere    = ["cohere>=5.5.0"]
huggingface       = ["huggingface-hub>=0.23.0"]
huggingface-local = ["huggingface-hub>=0.23.0", "transformers>=4.40.0", "torch>=2.2.0", "sentence-transformers>=3.0.0", "accelerate>=0.30.0", "sentencepiece>=0.2.0"]
all = [
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "cohere>=5.5.0",
    "huggingface-hub>=0.23.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
]

[project.urls]
Homepage      = "https://github.com/gowthamsai09/shama"
Documentation = "https://github.com/gowthamsai09/shama#readme"
Repository    = "https://github.com/gowthamsai09/shama"
Issues        = "https://github.com/gowthamsai09/shama/issues"

[tool.hatch.build.targets.wheel]
packages = ["shama"]

[tool.hatch.build.targets.sdist]
include = [
    "shama/",
    "tests/",
    "LICENSE",
    "README.md",
    "MANIFEST.in",
    "pyproject.toml",
    ".env",
]

[tool.ruff]
line-length    = 100
target-version = "py311"
select         = ["E", "F", "I", "N", "W", "UP"]
ignore         = ["E501"]

[tool.mypy]
python_version      = "3.11"
strict              = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"


[tool.coverage.run]
source = ["shama"]
omit   = ["tests/*"]